tests/machine/x/clj/outer_join.error
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/outer_join.clj:132:1).
EOF while reading, starting at line 24

Full report at:
/tmp/clojure-7811319382680626878.edn
